target/generated-sources/antlr4/br/ufscar/dc/compiladores/curriculo/CurriculoParser.java
// Generated from java-escape by ANTLR 4.11.1
package br.ufscar.dc.compiladores.curriculo;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CurriculoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CURRICULO=1, SECAO=2, EDUCACAO=3, EXPERIENCIA=4, HABILIDADES=5, IDIOMAS=6, 
		HABILIDADE=7, IDIOMA=8, GRADUACAO=9, POS_GRADUACAO=10, TECNICO=11, AVANCADO=12, 
		INTERMEDIARIO=13, BASICO=14, TRUE=15, FALSE=16, NOME=17, EMAIL=18, TELEFONE=19, 
		ENDERECO=20, LINKEDIN=21, GITHUB=22, INSTITUICAO=23, CURSO=24, NIVEL=25, 
		INICIO=26, FIM=27, CONCLUIDO=28, NOTA=29, EMPRESA=30, CARGO=31, ATUAL=32, 
		DESCRICAO=33, TECNOLOGIAS=34, CATEGORIA=35, ABRE_CHAVE=36, FECHA_CHAVE=37, 
		DOIS_PONTOS=38, PONTO_VIRGULA=39, VIRGULA=40, ABRE_COL=41, FECHA_COL=42, 
		STRING=43, NUM_INT=44, NUM_REAL=45, IDENT=46, WS=47, COMENTARIO=48;
	public static final int
		RULE_programa = 0, RULE_curriculo = 1, RULE_campos_curriculo = 2, RULE_campo_curriculo = 3, 
		RULE_secoes = 4, RULE_secao_educacao = 5, RULE_educacao_item = 6, RULE_campos_educacao = 7, 
		RULE_campo_educacao = 8, RULE_nivel_educacao = 9, RULE_secao_experiencia = 10, 
		RULE_experiencia_item = 11, RULE_campos_experiencia = 12, RULE_campo_experiencia = 13, 
		RULE_secao_habilidades = 14, RULE_habilidade_item = 15, RULE_campos_habilidade = 16, 
		RULE_campo_habilidade = 17, RULE_nivel_habilidade = 18, RULE_secao_idiomas = 19, 
		RULE_idioma_item = 20, RULE_campos_idioma = 21, RULE_campo_idioma = 22, 
		RULE_valor_booleano = 23, RULE_numero = 24, RULE_lista_strings = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "curriculo", "campos_curriculo", "campo_curriculo", "secoes", 
			"secao_educacao", "educacao_item", "campos_educacao", "campo_educacao", 
			"nivel_educacao", "secao_experiencia", "experiencia_item", "campos_experiencia", 
			"campo_experiencia", "secao_habilidades", "habilidade_item", "campos_habilidade", 
			"campo_habilidade", "nivel_habilidade", "secao_idiomas", "idioma_item", 
			"campos_idioma", "campo_idioma", "valor_booleano", "numero", "lista_strings"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'CURRICULO'", "'SECAO'", "'educacao'", "'experiencia'", "'habilidades'", 
			"'idiomas'", "'habilidade'", "'idioma'", "'GRADUACAO'", "'POS_GRADUACAO'", 
			"'TECNICO'", "'AVANCADO'", "'INTERMEDIARIO'", "'BASICO'", "'true'", "'false'", 
			"'nome'", "'email'", "'telefone'", "'endereco'", "'linkedin'", "'github'", 
			"'instituicao'", "'curso'", "'nivel'", "'inicio'", "'fim'", "'concluido'", 
			"'nota'", "'empresa'", "'cargo'", "'atual'", "'descricao'", "'tecnologias'", 
			"'categoria'", "'{'", "'}'", "':'", "';'", "','", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CURRICULO", "SECAO", "EDUCACAO", "EXPERIENCIA", "HABILIDADES", 
			"IDIOMAS", "HABILIDADE", "IDIOMA", "GRADUACAO", "POS_GRADUACAO", "TECNICO", 
			"AVANCADO", "INTERMEDIARIO", "BASICO", "TRUE", "FALSE", "NOME", "EMAIL", 
			"TELEFONE", "ENDERECO", "LINKEDIN", "GITHUB", "INSTITUICAO", "CURSO", 
			"NIVEL", "INICIO", "FIM", "CONCLUIDO", "NOTA", "EMPRESA", "CARGO", "ATUAL", 
			"DESCRICAO", "TECNOLOGIAS", "CATEGORIA", "ABRE_CHAVE", "FECHA_CHAVE", 
			"DOIS_PONTOS", "PONTO_VIRGULA", "VIRGULA", "ABRE_COL", "FECHA_COL", "STRING", 
			"NUM_INT", "NUM_REAL", "IDENT", "WS", "COMENTARIO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CurriculoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public CurriculoContext curriculo() {
			return getRuleContext(CurriculoContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CurriculoParser.EOF, 0); }
		public List<SecoesContext> secoes() {
			return getRuleContexts(SecoesContext.class);
		}
		public SecoesContext secoes(int i) {
			return getRuleContext(SecoesContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CurriculoVisitor ) return ((CurriculoVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			curriculo();
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SECAO) {
				{
				{
				setState(53);
				secoes();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CurriculoContext extends ParserRuleContext {
		public TerminalNode CURRICULO() { return getToken(CurriculoParser.CURRICULO, 0); }
		public TerminalNode IDENT() { return getToken(CurriculoParser.IDENT, 0); }
		public TerminalNode ABRE_CHAVE() { return getToken(CurriculoParser.ABRE_CHAVE, 0); }
		public Campos_curriculoContext campos_curriculo() {
			return getRuleContext(Campos_curriculoContext.class,0);
		}
		public TerminalNode FECHA_CHAVE() { return getToken(CurriculoParser.FECHA_CHAVE, 0); }
		public CurriculoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_curriculo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).enterCurriculo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).exitCurriculo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CurriculoVisitor ) return ((CurriculoVisitor<? extends T>)visitor).visitCurriculo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CurriculoContext curriculo() throws RecognitionException {
		CurriculoContext _localctx = new CurriculoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_curriculo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(CURRICULO);
			setState(62);
			match(IDENT);
			setState(63);
			match(ABRE_CHAVE);
			setState(64);
			campos_curriculo();
			setState(65);
			match(FECHA_CHAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Campos_curriculoContext extends ParserRuleContext {
		public List<Campo_curriculoContext> campo_curriculo() {
			return getRuleContexts(Campo_curriculoContext.class);
		}
		public Campo_curriculoContext campo_curriculo(int i) {
			return getRuleContext(Campo_curriculoContext.class,i);
		}
		public Campos_curriculoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campos_curriculo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).enterCampos_curriculo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).exitCampos_curriculo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CurriculoVisitor ) return ((CurriculoVisitor<? extends T>)visitor).visitCampos_curriculo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Campos_curriculoContext campos_curriculo() throws RecognitionException {
		Campos_curriculoContext _localctx = new Campos_curriculoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_campos_curriculo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 8257536L) != 0) {
				{
				{
				setState(67);
				campo_curriculo();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Campo_curriculoContext extends ParserRuleContext {
		public TerminalNode NOME() { return getToken(CurriculoParser.NOME, 0); }
		public TerminalNode DOIS_PONTOS() { return getToken(CurriculoParser.DOIS_PONTOS, 0); }
		public TerminalNode STRING() { return getToken(CurriculoParser.STRING, 0); }
		public TerminalNode PONTO_VIRGULA() { return getToken(CurriculoParser.PONTO_VIRGULA, 0); }
		public TerminalNode EMAIL() { return getToken(CurriculoParser.EMAIL, 0); }
		public TerminalNode TELEFONE() { return getToken(CurriculoParser.TELEFONE, 0); }
		public TerminalNode ENDERECO() { return getToken(CurriculoParser.ENDERECO, 0); }
		public TerminalNode LINKEDIN() { return getToken(CurriculoParser.LINKEDIN, 0); }
		public TerminalNode GITHUB() { return getToken(CurriculoParser.GITHUB, 0); }
		public Campo_curriculoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campo_curriculo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).enterCampo_curriculo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).exitCampo_curriculo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CurriculoVisitor ) return ((CurriculoVisitor<? extends T>)visitor).visitCampo_curriculo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Campo_curriculoContext campo_curriculo() throws RecognitionException {
		Campo_curriculoContext _localctx = new Campo_curriculoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_campo_curriculo);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOME:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				match(NOME);
				setState(74);
				match(DOIS_PONTOS);
				setState(75);
				match(STRING);
				setState(76);
				match(PONTO_VIRGULA);
				}
				break;
			case EMAIL:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				match(EMAIL);
				setState(78);
				match(DOIS_PONTOS);
				setState(79);
				match(STRING);
				setState(80);
				match(PONTO_VIRGULA);
				}
				break;
			case TELEFONE:
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				match(TELEFONE);
				setState(82);
				match(DOIS_PONTOS);
				setState(83);
				match(STRING);
				setState(84);
				match(PONTO_VIRGULA);
				}
				break;
			case ENDERECO:
				enterOuterAlt(_localctx, 4);
				{
				setState(85);
				match(ENDERECO);
				setState(86);
				match(DOIS_PONTOS);
				setState(87);
				match(STRING);
				setState(88);
				match(PONTO_VIRGULA);
				}
				break;
			case LINKEDIN:
				enterOuterAlt(_localctx, 5);
				{
				setState(89);
				match(LINKEDIN);
				setState(90);
				match(DOIS_PONTOS);
				setState(91);
				match(STRING);
				setState(92);
				match(PONTO_VIRGULA);
				}
				break;
			case GITHUB:
				enterOuterAlt(_localctx, 6);
				{
				setState(93);
				match(GITHUB);
				setState(94);
				match(DOIS_PONTOS);
				setState(95);
				match(STRING);
				setState(96);
				match(PONTO_VIRGULA);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SecoesContext extends ParserRuleContext {
		public Secao_educacaoContext secao_educacao() {
			return getRuleContext(Secao_educacaoContext.class,0);
		}
		public Secao_experienciaContext secao_experiencia() {
			return getRuleContext(Secao_experienciaContext.class,0);
		}
		public Secao_habilidadesContext secao_habilidades() {
			return getRuleContext(Secao_habilidadesContext.class,0);
		}
		public Secao_idiomasContext secao_idiomas() {
			return getRuleContext(Secao_idiomasContext.class,0);
		}
		public SecoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_secoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).enterSecoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).exitSecoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CurriculoVisitor ) return ((CurriculoVisitor<? extends T>)visitor).visitSecoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SecoesContext secoes() throws RecognitionException {
		SecoesContext _localctx = new SecoesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_secoes);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				secao_educacao();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				secao_experiencia();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				secao_habilidades();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(102);
				secao_idiomas();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Secao_educacaoContext extends ParserRuleContext {
		public TerminalNode SECAO() { return getToken(CurriculoParser.SECAO, 0); }
		public TerminalNode EDUCACAO() { return getToken(CurriculoParser.EDUCACAO, 0); }
		public TerminalNode ABRE_CHAVE() { return getToken(CurriculoParser.ABRE_CHAVE, 0); }
		public TerminalNode FECHA_CHAVE() { return getToken(CurriculoParser.FECHA_CHAVE, 0); }
		public List<Educacao_itemContext> educacao_item() {
			return getRuleContexts(Educacao_itemContext.class);
		}
		public Educacao_itemContext educacao_item(int i) {
			return getRuleContext(Educacao_itemContext.class,i);
		}
		public Secao_educacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_secao_educacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).enterSecao_educacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).exitSecao_educacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CurriculoVisitor ) return ((CurriculoVisitor<? extends T>)visitor).visitSecao_educacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Secao_educacaoContext secao_educacao() throws RecognitionException {
		Secao_educacaoContext _localctx = new Secao_educacaoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_secao_educacao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(SECAO);
			setState(106);
			match(EDUCACAO);
			setState(107);
			match(ABRE_CHAVE);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EDUCACAO) {
				{
				{
				setState(108);
				educacao_item();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			match(FECHA_CHAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Educacao_itemContext extends ParserRuleContext {
		public TerminalNode EDUCACAO() { return getToken(CurriculoParser.EDUCACAO, 0); }
		public TerminalNode ABRE_CHAVE() { return getToken(CurriculoParser.ABRE_CHAVE, 0); }
		public Campos_educacaoContext campos_educacao() {
			return getRuleContext(Campos_educacaoContext.class,0);
		}
		public TerminalNode FECHA_CHAVE() { return getToken(CurriculoParser.FECHA_CHAVE, 0); }
		public Educacao_itemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_educacao_item; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).enterEducacao_item(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).exitEducacao_item(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CurriculoVisitor ) return ((CurriculoVisitor<? extends T>)visitor).visitEducacao_item(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Educacao_itemContext educacao_item() throws RecognitionException {
		Educacao_itemContext _localctx = new Educacao_itemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_educacao_item);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(EDUCACAO);
			setState(117);
			match(ABRE_CHAVE);
			setState(118);
			campos_educacao();
			setState(119);
			match(FECHA_CHAVE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Campos_educacaoContext extends ParserRuleContext {
		public List<Campo_educacaoContext> campo_educacao() {
			return getRuleContexts(Campo_educacaoContext.class);
		}
		public Campo_educacaoContext campo_educacao(int i) {
			return getRuleContext(Campo_educacaoContext.class,i);
		}
		public Campos_educacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campos_educacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).enterCampos_educacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).exitCampos_educacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CurriculoVisitor ) return ((CurriculoVisitor<? extends T>)visitor).visitCampos_educacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Campos_educacaoContext campos_educacao() throws RecognitionException {
		Campos_educacaoContext _localctx = new Campos_educacaoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_campos_educacao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 1065353216L) != 0) {
				{
				{
				setState(121);
				campo_educacao();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Campo_educacaoContext extends ParserRuleContext {
		public TerminalNode INSTITUICAO() { return getToken(CurriculoParser.INSTITUICAO, 0); }
		public TerminalNode DOIS_PONTOS() { return getToken(CurriculoParser.DOIS_PONTOS, 0); }
		public TerminalNode STRING() { return getToken(CurriculoParser.STRING, 0); }
		public TerminalNode PONTO_VIRGULA() { return getToken(CurriculoParser.PONTO_VIRGULA, 0); }
		public TerminalNode CURSO() { return getToken(CurriculoParser.CURSO, 0); }
		public TerminalNode NIVEL() { return getToken(CurriculoParser.NIVEL, 0); }
		public Nivel_educacaoContext nivel_educacao() {
			return getRuleContext(Nivel_educacaoContext.class,0);
		}
		public TerminalNode INICIO() { return getToken(CurriculoParser.INICIO, 0); }
		public TerminalNode FIM() { return getToken(CurriculoParser.FIM, 0); }
		public TerminalNode CONCLUIDO() { return getToken(CurriculoParser.CONCLUIDO, 0); }
		public Valor_booleanoContext valor_booleano() {
			return getRuleContext(Valor_booleanoContext.class,0);
		}
		public TerminalNode NOTA() { return getToken(CurriculoParser.NOTA, 0); }
		public NumeroContext numero() {
			return getRuleContext(NumeroContext.class,0);
		}
		public Campo_educacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campo_educacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).enterCampo_educacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CurriculoListener ) ((CurriculoListener)listener).exitCampo_educacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CurriculoVisitor ) return ((CurriculoVisitor<? extends T>)visitor).visitCampo_educacao(this);
			else return visitor.visitChildren(this);
		}
	}
